04-authentication-ui: Add professional authentication interface and modular architecture
 Authentication UI Features:
- Professional sign-in/sign-up pages with modern two-column responsive design
- Custom Meet.AI logo and consistent blue branding throughout auth flows
- Enhanced form validation with password confirmation and real-time feedback
- Loading states with smooth animations and user-friendly error handling
- Social login UI elements prepared for Google and GitHub integration

 Architecture Improvements:
- Modular feature-based structure with dedicated /src/modules/auth/ directory
- Next.js route groups for clean authentication page organization /(auth)/
- Dedicated authentication layout with centered, responsive design
- Clear component separation between SignInView and SignUpView

 UI/UX Enhancements:
- Two-column layout with branded side panels on desktop
- Mobile-first responsive design optimized for all devices
- Professional gradient backgrounds and consistent styling
- Touch-friendly interactions with proper button sizing and spacing
- Terms of service and privacy policy integration for legal compliance

 Development Experience:
- Enhanced VS Code workspace settings with optimized configuration
- Streamlined ESLint configuration with proper ignore patterns
- Consistent tab size, word wrap, and file association settings
- Automatic code formatting and ESLint integration improvements

 Documentation:
- Updated CHANGELOG.md with comprehensive v0.2.0 release notes
- Enhanced README.md with new authentication features and project structure
- Documented modular architecture and authentication flow capabilities
- Added professional authentication features section with security highlights

 Security & Validation:
- Comprehensive Zod schema validation with custom error messages
- Form protection against multiple submissions with loading states
- Secure error messaging without exposing sensitive information
- Full TypeScript coverage for authentication flow typ

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
   "editor.wordWrap": "wordWrapColumn",
   "editor.wordWrapColumn": 90,
+  "editor.tabSize": 2,
   "editor.formatOnSave": true,
   "editor.defaultFormatter": "esbenp.prettier-vscode",
   "editor.codeActionsOnSave": {
@@ -17,5 +18,9 @@
   },
   "[typescriptreact]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
+  "explorer.compactFolders": false,
+  "files.associations": {
+    "*.svg": "html"
   }
 }
