--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
     "format:check": "prettier --check .",
     "db:push": "drizzle-kit push",
     "db:studio": "drizzle-kit studio",
-    "dev:webhook": "for /f \"tokens=2 delims==\" %i in ('findstr NGROK_URL .env') do ngrok http --url=%i 3000"
+    "dev:webhook": "node -e \"const fs=require('fs');const cp=require('child_process');const m=fs.readFileSync('.env','utf8').match(/^NGROK_URL=(.*)$/m);if(m){cp.spawn('ngrok',['http',`--url=${m[1]}`,'3000'],{stdio:'inherit'});}else{console.error('NGROK_URL not found in .env');process.exit(1);}\""
   },
   "dependencies": {
     "@dicebear/collection": "^9.2.4",
     "@dicebear/core": "^9.2.4",
     "@hookform/resolvers": "^5.2.1",
+    "@inngest/agent-kit": "^0.9.0",
     "@neondatabase/serverless": "^1.0.0",
     "@radix-ui/react-accordion": "^1.2.11",
     "@radix-ui/react-alert-dialog": "^1.1.14",
@@ -62,7 +63,9 @@
     "drizzle-orm": "^0.43.1",
     "embla-carousel-react": "^8.6.0",
     "humanize-duration": "^3.33.0",
+    "inngest": "^3.40.1",
     "input-otp": "^1.4.2",
+    "jsonl-parse-stringify": "^1.0.3",
     "lucide-react": "^0.539.0",
     "nanoid": "^5.1.5",
     "next": "15.4.6",
