29c-bugfix: added property environment setup to polar app

--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,12 @@
 # Copy this file to .env and fill in your values
 
 # =============================================================================
+# Project Environment
+# =============================================================================
+# Values: production, development, test (this last one is not currently in use )
+NODE_ENV='development'
+
+# =============================================================================
 # Database Configuration
 # =============================================================================
 # PostgreSQL connection URL for Neon database
